# iit_rbd

./: LICENSE  install.sh  readme.md
iit/rbd/: InertiaMatrix.h  SpatialTransform.h  StateDependentBase.h  StateDependentMatrix.h  TransformsBase.h  compact_transform.h  eigen_traits.h  internals.h  rbd.h  robcogen_commons.h  scalar_traits.h  utils.h
iit/robcogen/: jacs.h  macros.h  utils.h
iit/robcogen/scalar/: cppad.h  internals.h
iit/robcogen/test/: cmdline_fd.h  cmdline_id.h  cmdline_jsim.h  dynamics_cmd_line.h  dynamics_consistency.h  fext.h
test/: CMakeLists.txt  basic-traits.cpp  basic-traits.h  test-cppad.cpp
